[gd_scene load_steps=6 format=2]

[ext_resource path="res://Game.gd" type="Script" id=1]
[ext_resource path="res://timer/Timer.tscn" type="PackedScene" id=2]
[ext_resource path="res://world_map/WorldMap.tscn" type="PackedScene" id=3]
[ext_resource path="res://party/PartyGenerator.gd" type="Script" id=4]
[ext_resource path="res://factions/FactionsManager.gd" type="Script" id=5]

[node name="Game" type="Node"]
script = ExtResource( 1 )

[node name="Timer" parent="." instance=ExtResource( 2 )]

[node name="WorldMap" parent="." instance=ExtResource( 3 )]

[node name="PartyGenerator" type="Node" parent="."]
script = ExtResource( 4 )

[node name="FactionsManager" type="Node" parent="."]
script = ExtResource( 5 )

